--- a/package.json
+++ b/package.json
@@ -1,38 +1,52 @@
 {
-  "name": "ecommerce-react-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "ecommerce-react-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.12.0",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-scripts": "4.0.3",
+		"react-router-dom": "^6.0.0-beta.0",
+		"web-vitals": "^1.1.2",
+		"cross-env": "^7.0.2",
+		"json-server": "^0.16.1",
+		"@material-ui/core": "4.11.4",
+		"@material-ui/icons": "4.11.2",
+		"history": "^5.0.0",
+		"npm-run-all": "^4.1.5",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint": "7.29.0",
+		"husky": "^1.3.1",
+		"lint-staged": "^8.1.3"
+	},
+	"scripts": {
+		"start": "run-p start-app start-api",
+		"start-app": "cross-env REACT_APP_API_BASE_URL=http://localhost:3002/  API_HOST=http://localhost:3001/api react-scripts start",
+		"start-api": "json-server --port 3002 --watch db.json",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
