--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"eslint-plugin-import": "^2.23.4",
 		"eslint": "7.29.0",
 		"husky": "^1.3.1",
-		"lint-staged": "^8.1.3"
+		"lint-staged": "^8.1.3",
+		"redux": "4.0.5",
+		"react-redux": "7.2.1"
 	},
 	"scripts": {
 		"start": "run-p start-app start-api",
